add delete and add book feature
1. add book
2. delete book
3. singleton service

--- a/src/main/resources/add-book.html
+++ b/src/main/resources/add-book.html
@@ -9,7 +9,7 @@
 <!-- Begin Head -->
 
 <head>
-    <title>Students</title>
+    <title>Add Borrow Info</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="">
@@ -41,7 +41,7 @@
         <div class="side-menu-wrap">
             <ul class="main-menu">
                 <li>
-                    <a href="index">
+                    <a href="index" class="active">
                             <span class="icon-menu feather-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="none"
                                      stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="student" class="active">
+                    <a href="student">
                             <span class="icon-menu feather-icon">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="none"
                                      stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -99,101 +99,73 @@
         <div class="main-content">
             <!-- Page Title Start -->
             <div class="row">
-                <div class="colxl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="page-title-wrapper">
-                        <div class="page-title-box ad-title-box-use">
-                            <h4 class="page-title">Student Management</h4>
+                        <div class="page-title-box">
+                            <h4 class="page-title">Add Book Info</h4>
                         </div>
-                        <div class="ad-breadcrumb">
+                        <div class="breadcrumb-list">
                             <ul>
-                                <li>
-                                    <div class="ad-user-btn">
-                                        <input class="form-control" type="text" placeholder="Search Here..."
-                                               id="text-input">
-                                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
-                                             viewBox="0 0 56.966 56.966">
-                                            <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23
-												s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92
-												c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17
-												s-17-7.626-17-17S14.61,6,23.984,6z"></path>
-                                        </svg>
-                                    </div>
+                                <li class="breadcrumb-link">
+                                    <a href="javascript:void(0);"><i class="fas fa-home mr-2"></i>Dashboard</a>
                                 </li>
-                                <li>
-                                    <div class="add-group">
-                                        <a class="ad-btn">Add New Students</a>
-                                    </div>
-                                </li>
+                                <li class="breadcrumb-link active">Basic Form</li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Table Start -->
-            <div class="row">
-                <!-- Styled Table Card-->
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="card table-card">
-                        <div class="card-header pb-0">
-                            <h4>Students List</h4>
-                        </div>
-                        <div class="card-body">
-                            <div class="chart-holder">
-                                <div class="table-responsive">
-                                    <table class="table table-styled mb-0">
-                                        <thead>
-                                        <tr>
-                                            <th>Student ID</th>
-                                            <th>Student Name</th>
-                                            <th>Gender</th>
-                                            <th>Grade</th>
-                                            <th>Action</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr th:each="student:${student_list}">
-                                            <td th:text="'#'+${student.getSid()}">#123</td>
-                                            <td th:text="${student.getName()}">Scott Henry</td>
-                                            <td th:text="${student.getSex().toUpperCase()}">Male</td>
-                                            <td th:text="'Grade: '+${student.getGrade()}">Grade 3</td>
-                                            <td class="relative">
-                                                <a class="action-btn " href="javascript:void(0); ">
-                                                    <svg class="default-size " viewBox="0 0 341.333 341.333 ">
-                                                        <g>
-                                                            <g>
-                                                                <g>
-                                                                    <path d="M170.667,85.333c23.573,0,42.667-19.093,42.667-42.667C213.333,19.093,194.24,0,170.667,0S128,19.093,128,42.667 C128,66.24,147.093,85.333,170.667,85.333z "></path>
-                                                                    <path d="M170.667,128C147.093,128,128,147.093,128,170.667s19.093,42.667,42.667,42.667s42.667-19.093,42.667-42.667 S194.24,128,170.667,128z "></path>
-                                                                    <path d="M170.667,256C147.093,256,128,275.093,128,298.667c0,23.573,19.093,42.667,42.667,42.667s42.667-19.093,42.667-42.667 C213.333,275.093,194.24,256,170.667,256z "></path>
-                                                                </g>
-                                                            </g>
-                                                        </g>
-                                                    </svg>
-                                                </a>
-                                                <div class="action-option ">
-                                                    <ul>
-                                                        <li>
-                                                            <a href="javascript:void(0); "><i
-                                                                    class="far fa-edit mr-2 "></i>Edit</a>
-                                                        </li>
-                                                        <li>
-                                                            <a th:href="'delete-student?sid='+${student.getSid()}"><i
-                                                                    class="far fa-trash-alt mr-2 "></i>Delete</a>
-                                                        </li>
-                                                    </ul>
+            <!-- From Start -->
+            <div class="from-wrapper">
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <form class="separate-form" method="post" action="add-book">
+                                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                                        <h5 class="from-title mb-1">Please Enter Book Info To Database </h5>
+                                        <br>
+                                        <div class="row">
+<!--                                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">-->
+<!--                                                <div class="form-group">-->
+<!--                                                    <label for="member-name" class="col-form-label">Book ID</label>-->
+<!--                                                    <input class="form-control" type="text" placeholder="Enter Book ID" id="member-name" name="bid">-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+                                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                                <div class="form-group">
+                                                    <label for="member-email" class="col-form-label">Book Title</label>
+                                                    <input class="form-control" type="text" placeholder="Enter Book Title" id="member-email", name="title">
                                                 </div>
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
+                                            </div>
+                                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                                <div class="form-group">
+                                                    <label for="company-name" class="col-form-label">Book Description</label>
+                                                    <input class="form-control" type="text" placeholder="Enter Book Description" id="company-name" name="bookInfo">
+                                                </div>
+                                            </div>
+                                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                                                <div class="form-group">
+                                                    <label for="web-url" class="col-form-label">Book Price</label>
+                                                    <input class="form-control" type="text" placeholder="Enter Book Price" id="web-url" name="price">
+                                                </div>
+                                            </div>
+                                        </div>
+<!--                                        <hr class="mt-4 mb-4">-->
+                                        <div class="form-group mb-0">
+                                            <button  class="btn btn-primary" type="submit">Submit</button>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
-                </div>
+
+
+<!--                </div>-->
+
+
             </div>
-
-
             <div class="ad-footer-btm">
                 <p>Copyright © 2021.Company name All rights reserved.<a target="_blank"
                                                                         href="https://sc.chinaz.com/moban/">网页模板</a>
