--- a/src/main/resources/book.html
+++ b/src/main/resources/book.html
@@ -121,7 +121,7 @@
                                 </li>
                                 <li>
                                     <div class="add-group">
-                                        <a class="ad-btn">Add New Books</a>
+                                        <a href="add-book" class="ad-btn">Add New Books</a>
                                     </div>
                                 </li>
                             </ul>
@@ -184,7 +184,7 @@
                                                                     class="far fa-edit mr-2 "></i>Edit</a>
                                                         </li>
                                                         <li>
-                                                            <a href="javascript:void(0); "><i
+                                                            <a th:href="'delete-book?bid='+${book_entity.getKey().getBid()}"><i
                                                                     class="far fa-trash-alt mr-2 "></i>Delete</a>
                                                         </li>
                                                     </ul>
