add students and index cards

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -203,8 +203,8 @@
                                     </svg>
                             </div>
                             <div class="icon-info-text">
-                                <h5 class="ad-title">Happy Customers</h5>
-                                <h4 class="ad-card-title">66k</h4>
+                                <h5 class="ad-title">Students</h5>
+                                <h4 class="ad-card-title" th:text="${student_number}"></h4>
                             </div>
                         </div>
                     </div>
@@ -221,8 +221,8 @@
                                 </svg>
                             </div>
                             <div class="icon-info-text">
-                                <h5 class="ad-title">Daily Orders</h5>
-                                <h4 class="ad-card-title">15k</h4>
+                                <h5 class="ad-title">Books</h5>
+                                <h4 class="ad-card-title" th:text="${book_number}"></h4>
                             </div>
                         </div>
                     </div>
@@ -243,8 +243,8 @@
                                 </svg>
                             </div>
                             <div class="icon-info-text">
-                                <h5 class="ad-title">Total Sales</h5>
-                                <h4 class="ad-card-title">420k</h4>
+                                <h5 class="ad-title">Total Borrows</h5>
+                                <h4 class="ad-card-title" th:text="${borrow_number}"></h4>
                             </div>
                         </div>
                     </div>
