--- a/src/main/resources/student.html
+++ b/src/main/resources/student.html
@@ -121,7 +121,7 @@
                                 </li>
                                 <li>
                                     <div class="add-group">
-                                        <a class="ad-btn">Add New Students</a>
+                                        <a href="add-student" class="ad-btn">Add New Students</a>
                                     </div>
                                 </li>
                             </ul>
