--- a/src/main/resources/add-student.html
+++ b/src/main/resources/add-student.html
@@ -102,7 +102,7 @@
                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="page-title-wrapper">
                         <div class="page-title-box">
-                            <h4 class="page-title">Add Book Info</h4>
+                            <h4 class="page-title">Add Student Info</h4>
                         </div>
                         <div class="breadcrumb-list">
                             <ul>
@@ -121,9 +121,9 @@
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="card">
                             <div class="card-body">
-                                <form class="separate-form" method="post" action="add-book">
+                                <form class="separate-form" method="post" action="add-student">
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                                        <h5 class="from-title mb-1">Please Enter Book Info To Database </h5>
+                                        <h5 class="from-title mb-1">Please Enter Student Info To Database </h5>
                                         <br>
                                         <div class="row">
                                             <!--                                            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">-->
@@ -134,26 +134,30 @@
                                             <!--                                            </div>-->
                                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                                 <div class="form-group">
-                                                    <label for="member-email" class="col-form-label">Book Title</label>
+                                                    <label for="member-email" class="col-form-label">Student
+                                                        Name</label>
                                                     <input class="form-control" type="text"
-                                                           placeholder="Enter Book Title" id="member-email" ,
-                                                           name="title">
+                                                           placeholder="Enter Student Name" id="member-email" ,
+                                                           name="name">
                                                 </div>
                                             </div>
                                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                                 <div class="form-group">
-                                                    <label for="company-name" class="col-form-label">Book
-                                                        Description</label>
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Enter Book Description" id="company-name"
-                                                           name="bookInfo">
+                                                    <label for="region" class="col-form-label">Student Grade</label>
+                                                    <select class="select2 form-control" id="city" name="sex">
+                                                        <option value="male" text="Grade 1">Male</option>
+                                                        <option value="female" text="Grade 2">Female</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                                 <div class="form-group">
-                                                    <label for="web-url" class="col-form-label">Book Price</label>
-                                                    <input class="form-control" type="text"
-                                                           placeholder="Enter Book Price" id="web-url" name="price">
+                                                    <label for="region" class="col-form-label">Student Grade</label>
+                                                    <select class="select2 form-control" id="region" name="grade">
+                                                        <option value="1" text="Grade 1">Grade 1</option>
+                                                        <option value="2" text="Grade 2">Grade 2</option>
+                                                        <option value="3" text="Grade 3">Grade 3</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
@@ -175,140 +179,141 @@
             </div>
         </div>
     </div>
-</div>
 
 
-<!-- Slide Setting Box -->
-<div class="slide-setting-box">
-    <div class="slide-setting-holder">
-        <div class="setting-box-head">
-            <h4>General Settings</h4>
-            <a href="javascript:void(0);" class="close-btn">Close</a>
-        </div>
-        <div class="setting-box-body">
+    <!-- Slide Setting Box -->
+    <div class="slide-setting-box">
+        <div class="slide-setting-holder">
+            <div class="setting-box-head">
+                <h4>General Settings</h4>
+                <a href="javascript:void(0);" class="close-btn">Close</a>
+            </div>
+            <div class="setting-box-body">
+                <div class="p-4">
+                    <div class="switch-settings">
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">Notifications</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox55" type="checkbox">
+                                <label for="checkbox55"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">Show your emails</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox56" type="checkbox">
+                                <label for="checkbox56"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">Show Task statistics</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox57" type="checkbox">
+                                <label for="checkbox57"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">Show recent activity</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox58" type="checkbox">
+                                <label for="checkbox58"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">System Logs</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox59" type="checkbox">
+                                <label for="checkbox59"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">Error Reporting</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox60" type="checkbox">
+                                <label for="checkbox60"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex mb-3">
+                            <span class="mr-auto fs-15">Show your status to all</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox61" type="checkbox">
+                                <label for="checkbox61"></label>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <span class="mr-auto fs-15">Keep up to date</span>
+                            <div class="checkbox checkbox-toggle">
+                                <input id="checkbox62" type="checkbox">
+                                <label for="checkbox62"></label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="p-3 border-top border-bottom">
+                <h5 class="border-bottom-0 mb-0">Overview</h5>
+            </div>
             <div class="p-4">
-                <div class="switch-settings">
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">Notifications</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox55" type="checkbox">
-                            <label for="checkbox55"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">Show your emails</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox56" type="checkbox">
-                            <label for="checkbox56"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">Show Task statistics</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox57" type="checkbox">
-                            <label for="checkbox57"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">Show recent activity</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox58" type="checkbox">
-                            <label for="checkbox58"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">System Logs</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox59" type="checkbox">
-                            <label for="checkbox59"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">Error Reporting</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox60" type="checkbox">
-                            <label for="checkbox60"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <span class="mr-auto fs-15">Show your status to all</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox61" type="checkbox">
-                            <label for="checkbox61"></label>
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <span class="mr-auto fs-15">Keep up to date</span>
-                        <div class="checkbox checkbox-toggle">
-                            <input id="checkbox62" type="checkbox">
-                            <label for="checkbox62"></label>
+                <div class="progress-wrapper">
+                    <div class="mb-3">
+                        <p class="mb-2">Achieves<span class="float-right text-muted font-weight-normal">95%</span></p>
+                        <div class="progress h-1">
+                            <div class="progress-bar bg-primary col-3" role="progressbar" aria-valuenow="25"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="p-3 border-top border-bottom">
-            <h5 class="border-bottom-0 mb-0">Overview</h5>
-        </div>
-        <div class="p-4">
-            <div class="progress-wrapper">
-                <div class="mb-3">
-                    <p class="mb-2">Achieves<span class="float-right text-muted font-weight-normal">95%</span></p>
-                    <div class="progress h-1">
-                        <div class="progress-bar bg-primary col-3" role="progressbar" aria-valuenow="25"
-                             aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-wrapper pt-2">
+                    <div class="mb-3">
+                        <p class="mb-2">Projects<span class="float-right text-muted font-weight-normal">65%</span></p>
+                        <div class="progress">
+                            <div class="progress-bar bg-secondary col-3" role="progressbar" aria-valuenow="25"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="progress-wrapper pt-2">
-                <div class="mb-3">
-                    <p class="mb-2">Projects<span class="float-right text-muted font-weight-normal">65%</span></p>
-                    <div class="progress">
-                        <div class="progress-bar bg-secondary col-3" role="progressbar" aria-valuenow="25"
-                             aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-wrapper pt-2">
+                    <div class="mb-3">
+                        <p class="mb-2">Earnings<span class="float-right text-muted font-weight-normal">55%</span></p>
+                        <div class="progress">
+                            <div class="progress-bar bg-success col-8" role="progressbar" aria-valuenow="25"
+                                 aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="progress-wrapper pt-2">
-                <div class="mb-3">
-                    <p class="mb-2">Earnings<span class="float-right text-muted font-weight-normal">55%</span></p>
-                    <div class="progress">
-                        <div class="progress-bar bg-success col-8" role="progressbar" aria-valuenow="25"
-                             aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-wrapper pt-2">
+                    <div class="mb-3">
+                        <p class="mb-2">Balance<span class="float-right text-muted font-weight-normal">50%</span></p>
+                        <div class="progress h-1">
+                            <div class="progress-bar bg-warning w-50 " role="progressbar"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="progress-wrapper pt-2">
-                <div class="mb-3">
-                    <p class="mb-2">Balance<span class="float-right text-muted font-weight-normal">50%</span></p>
-                    <div class="progress h-1">
-                        <div class="progress-bar bg-warning w-50 " role="progressbar"></div>
+                <div class="progress-wrapper pt-2">
+                    <div class="mb-3">
+                        <p class="mb-2">Total Profits<span class="float-right text-muted font-weight-normal">80%</span>
+                        </p>
+                        <div class="progress">
+                            <div class="progress-bar bg-info col-6" role="progressbar" aria-valuenow="25"
+                                 aria-valuemin="0"
+                                 aria-valuemax="100"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="progress-wrapper pt-2">
-                <div class="mb-3">
-                    <p class="mb-2">Total Profits<span class="float-right text-muted font-weight-normal">80%</span>
-                    </p>
-                    <div class="progress">
-                        <div class="progress-bar bg-info col-6" role="progressbar" aria-valuenow="25"
-                             aria-valuemin="0"
-                             aria-valuemax="100"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="progress-wrapper pt-2">
-                <div class="mb-3">
-                    <p class="mb-2">Total Likes<span class="float-right text-muted font-weight-normal">75%</span>
-                    </p>
-                    <div class="progress h-1">
-                        <div class="progress-bar bg-teal w-75" role="progressbar"></div>
+                <div class="progress-wrapper pt-2">
+                    <div class="mb-3">
+                        <p class="mb-2">Total Likes<span class="float-right text-muted font-weight-normal">75%</span>
+                        </p>
+                        <div class="progress h-1">
+                            <div class="progress-bar bg-teal w-75" role="progressbar"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
 
 <!-- Script Start -->
 <script src="static/js/jquery.min.js"></script>
@@ -321,7 +326,6 @@
 <script src="static/js/nice-select.min.js"></script>
 <!-- Custom Script -->
 <script src="static/js/custom.js"></script>
-
 </body>
 
 </html>
