--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -33,7 +33,7 @@
                     <div class="ad-auth-content">
                         <form method="post">
                             <a href="index.html" class="ad-auth-logo">
-                                <img src="static/picture/logo2.png" alt="">
+                                <img src="static/picture/new_logo2.png" alt="">
                             </a>
                             <h2><span class="primary">Hello,</span>Welcome</h2>
                             <p th:if="${!failure}">Please Enter Your Username And Password</p>
