--- a/src/main/resources/header.html
+++ b/src/main/resources/header.html
@@ -7,7 +7,7 @@
     <div class="header-inner-wrapper">
         <div class="logo-wrapper">
             <a href="" class="admin-logo">
-                <img src="static/picture/logo.png" alt="">
+                <img src="static/picture/new_logo.png" alt="">
             </a>
         </div>
         <div class="header-right">
